--- a/index.html
+++ b/index.html
@@ -3,53 +3,215 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Code Guesser Game New</title>
+    <title>Code Guesser - Welcome</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: "Roboto", sans-serif;
+            background-color: #1a1a2e;
+            color: #ffffff;
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            line-height: 1.6;
+        }
+
+        .landing-container {
+            width: 100%;
+            max-width: 800px;
+            padding: 3rem;
+            background-color: rgba(22, 33, 62, 0.7);
+            border-radius: 15px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+        }
+
+        .title {
+            text-align: center;
+            color: #4ecca3;
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+            text-shadow: 0 0 10px rgba(78, 204, 163, 0.3);
+        }
+
+        .subtitle {
+            text-align: center;
+            color: #a0a0a0;
+            margin-bottom: 2rem;
+        }
+
+        .game-rules {
+            margin-bottom: 2rem;
+        }
+
+        .game-rules h2 {
+            color: #4ecca3;
+            margin-bottom: 1rem;
+        }
+
+        .game-rules ul {
+            list-style-position: inside;
+            color: #e0e0e0;
+        }
+
+        .game-rules li {
+            margin-bottom: 0.5rem;
+        }
+
+        .player-section {
+            margin-bottom: 2rem;
+        }
+
+        .player-section h2 {
+            color: #4ecca3;
+            margin-bottom: 1rem;
+        }
+
+        .player-input-group {
+            display: flex;
+            gap: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        .player-input {
+            flex: 1;
+            padding: 0.75rem;
+            font-size: 1rem;
+            border: none;
+            border-radius: 5px;
+            background-color: rgba(35, 39, 65, 0.7);
+            color: #ffffff;
+        }
+
+        .create-id-btn {
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+            border: none;
+            border-radius: 5px;
+            background-color: #4ecca3;
+            color: #1a1a2e;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .create-id-btn:hover {
+            background-color: #45b393;
+        }
+
+        .start-btn {
+            display: block;
+            width: 200px;
+            margin: 0 auto;
+            padding: 1rem;
+            font-size: 1.2rem;
+            border: none;
+            border-radius: 25px;
+            background-color: #4ecca3;
+            color: #1a1a2e;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .start-btn:hover {
+            background-color: #45b393;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(78, 204, 163, 0.4);
+        }
+
+        .start-btn:disabled {
+            background-color: #2a2a3a;
+            cursor: not-allowed;
+            transform: none;
+            box-shadow: none;
+        }
+
+        @media (max-width: 768px) {
+            .landing-container {
+                padding: 2rem;
+                margin: 1rem;
+            }
+
+            .title {
+                font-size: 2rem;
+            }
+
+            .player-input-group {
+                flex-direction: column;
+            }
+
+            .create-id-btn {
+                width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-    <div class="game-container">
-        <header>
-            <h1>Code Guesser</h1>
-            <div class="game-info">
-                <div id="round-info">Round: 1 / 6</div>
-                <div id="total-score">Total Score: 0</div>
+    <div class="landing-container">
+        <h1 class="title">Code Guesser</h1>
+        <p class="subtitle">Test your coding knowledge!</p>
+
+        <div class="game-rules">
+            <h2>Game Rules</h2>
+            <ul>
+                <li>You will be shown an actual open-source code from a random repository</li>
+                <li>Try to guess the tags related to the code (Programming Language, Domain, etc.)</li>
+                <li>50 points for each correct tag</li>
+                <li>Extra 20 points if you guess correctly in the first 30 seconds</li>
+                <li>Play six rounds and aim for the highest score!</li>
+            </ul>
+        </div>
+
+        <div class="player-section">
+            <h2>Player ID</h2>
+            <div class="player-input-group">
+                <input type="text" id="playerId" class="player-input" readonly>
+                <button onclick="generatePlayerId()" class="create-id-btn">Create ID</button>
             </div>
-        </header>
-        <main>
-            <div class="code-and-hint">
-                <div class="code-card">
-                    <pre class="code-snippet" id="code-snippet">
-                        <!-- Code snippet will be inserted dynamically -->
-                    </pre>
-                </div>
-                <div id="hint-display" class="hint-display hidden">
-                    <button id="close-hint" class="close-hint">&times;</button>
-                    <h3>Hint</h3>
-                    <p id="hint-text"></p>
-                </div>
-            </div>
-            <div class="timer-container">
-                <div class="timer" id="timer">Time Left: 90s</div>
-                <div class="timer-bar-container">
-                    <div id="timer-bar"></div>
-                    <div id="bonus-section"></div>
-                    <span id="bonus-label">Bonus</span>
-                </div>
-            </div>
-            <div class="game-controls">
-                <div class="tags-input">
-                    <input type="text" id="tag-input" placeholder="Enter a tag" />
-                    <button onclick="addTag()">Add Tag</button>
-                </div>
-                <button id="hint-btn" onclick="getHint()">Get Hint</button>
-                <button class="submit-btn" onclick="submitTags()">Submit Tags</button>
-            </div>
-            <div id="tags-container"></div>
-        </main>
-        <div id="results" class="results-overlay hidden"></div>
+        </div>
+
+        <button id="startButton" onclick="startGame()" class="start-btn" disabled>Start Game</button>
     </div>
-    <script src="script.js"></script>
+
+    <script>
+        function generateRandomId() {
+            const characters = 'abcdefghijklmnopqrstuvwxyz0123456789';
+            let result = '';
+            for (let i = 0; i < 8; i++) {
+                result += characters.charAt(Math.floor(Math.random() * characters.length));
+            }
+            return result;
+        }
+
+        function generatePlayerId() {
+            const playerId = generateRandomId();
+            document.getElementById('playerId').value = playerId;
+            localStorage.setItem('playerId', playerId);
+            document.getElementById('startButton').disabled = false;
+        }
+
+        function startGame() {
+            const playerId = document.getElementById('playerId').value;
+            if (playerId) {
+                // Rename the current game.html to game.html
+                window.location.href = 'game.html';
+            }
+        }
+
+        // Check if player ID exists in localStorage
+        window.onload = function() {
+            const existingPlayerId = localStorage.getItem('playerId');
+            if (existingPlayerId) {
+                document.getElementById('playerId').value = existingPlayerId;
+                document.getElementById('startButton').disabled = false;
+            }
+        }
+    </script>
 </body>
 </html>
-
